# treegix

./: .gitignore  Dockerfile  Makefile.am  Makefile.in  aclocal.m4  build.sh  compile  config.guess  config.sub  configure  configure.ac  depcomp  docker-compose.yml  missing  rebuild-front.sh  treegix_agentd.conf  treegix_server.conf
man/: Makefile.am  Makefile.in  treegix_agent2.man  treegix_agentd.man  treegix_get.man  treegix_proxy.man  treegix_sender.man  treegix_server.man  zabbix_agent2.man  zabbix_sender.man  zabbix_server.man
src/: Makefile.am  Makefile.in
src/libs/: Makefile.am  Makefile.in
src/libs/zbxalgo/: Makefile.am  Makefile.in  algodefs.c  binaryheap.c  evaluate.c  hashmap.c  hashset.c  int128.c  prediction.c  queue.c  vector.c  vectorimpl.h
src/libs/zbxcommon/: Makefile.am  Makefile.in  alias.c  comms.c  file.c  iprange.c  misc.c  setproctitle.c  str.c  variant.c  variant_misc.c  xml.c  zbxgetopt.c
src/libs/zbxcomms/: Makefile.am  Makefile.in  comms.c  telnet.c
src/libs/zbxcommshigh/: Makefile.am  Makefile.in  comms.c
src/libs/zbxcompress/: Makefile.am  Makefile.in  compress.c
src/libs/zbxconf/: Makefile.am  Makefile.in  cfg.c
src/libs/zbxcrypto/: Makefile.am  Makefile.in  base64.c  md5.c  tls.c  tls.h  tls_tcp.h  tls_tcp_active.h
src/libs/zbxdb/: Makefile.am  Makefile.in  db.c
src/libs/zbxdbcache/: Makefile.am  Makefile.in  dbcache.c  dbconfig.c  dbconfig.h  dbconfig_dump.c  dbconfig_maintenance.c  dbsync.c  dbsync.h  valuecache.c  valuecache.h
src/libs/zbxdbhigh/: Makefile.am  Makefile.in  db.c  dbschema.c  discovery.c  event.c  export.c  host.c  item.c  itservices.c  lld_macro.c  maintenance.c  proxy.c  template.h  template_item.c  trigger.c
src/libs/zbxdbupgrade/: Makefile.am  Makefile.in  dbupgrade.c  dbupgrade.h  dbupgrade_2010.c  dbupgrade_2020.c  dbupgrade_2030.c  dbupgrade_2040.c  dbupgrade_2050.c  dbupgrade_3000.c  dbupgrade_3010.c  dbupgrade_3020.c  dbupgrade_3030.c  dbupgrade_3040.c  dbupgrade_3050.c  dbupgrade_4000.c  dbupgrade_4010.c  dbupgrade_4020.c  dbupgrade_4030.c  dbupgrade_4040.c
src/libs/zbxembed/: Makefile.am  Makefile.in  duk_config.h  duktape.h  embed.c  embed.h  httprequest.c  httprequest.h  treegix.c  treegix.h  zabbix.c
src/libs/zbxexec/: Makefile.am  Makefile.in  execute.c
src/libs/zbxhistory/: Makefile.am  Makefile.in  history.c  history.h  history_elastic.c  history_sql.c
src/libs/zbxhttp/: Makefile.am  Makefile.in  http.c  punycode.c  punycode.h  urlencode.c
src/libs/zbxicmpping/: Makefile.am  Makefile.in  icmpping.c
src/libs/zbxipcservice/: Makefile.am  Makefile.in  ipcservice.c
src/libs/zbxjson/: Makefile.am  Makefile.in  json.c  json.h  json_parser.c  json_parser.h  jsonpath.c  jsonpath.h
src/libs/zbxlog/: Makefile.am  Makefile.in  log.c
src/libs/zbxmedia/: Makefile.am  Makefile.in  email.c  sms.c
src/libs/zbxmemory/: Makefile.am  Makefile.in  memalloc.c
src/libs/zbxmodules/: Makefile.am  Makefile.in  modules.c
src/libs/zbxnix/: Makefile.am  Makefile.in  control.c  control.h  coredump.c  daemon.c  dshm.c  fatal.c  fatal.h  ipc.c  pid.c  sigcommon.h  sighandler.c
src/libs/zbxprometheus/: Makefile.am  Makefile.in  zbxprometheus.c
src/libs/zbxregexp/: Makefile.am  Makefile.in  zbxregexp.c
src/libs/zbxself/: Makefile.am  Makefile.in  selfmon.c
src/libs/zbxserver/: Makefile.am  Makefile.in  evalfunc.c  evalfunc.h  expression.c  macrofunc.c  macrofunc.h  treegix_stats.c  treegix_stats.h  treegix_stats_proxy.c  treegix_stats_server.c  zabbix_stats.c  zabbix_stats.h  zabbix_stats_server.c
src/libs/zbxsys/: Makefile.am  Makefile.in  mutexs.c  symbols.c  threads.c
src/libs/zbxsysinfo/: Makefile.am  Makefile.in  specsysinfo.h  sysinfo.c
src/libs/zbxtasks/: Makefile.am  Makefile.in  task.c
src/libs/zbxwin32/: disk.c  fatal.c  perfmon.c  service.c
src/modules/dummy/: README  dummy.c
src/treegix_agent/: Makefile.am  Makefile.in  active.c  active.h  cpustat.c  cpustat.h  diskdevices.c  diskdevices.h  eventlog.c  eventlog.h  listener.c  listener.h  metrics.h  perfstat.c  perfstat.h  procstat.c  procstat.h  stats.c  stats.h  treegix_agentd.c  vmstats.c  vmstats.h  zabbix_agentd.c  zbxconf.c  zbxconf.h
src/treegix_agent/logfiles/: Makefile.am  Makefile.in  logfiles.c  logfiles.h
src/treegix_get/: Makefile.am  Makefile.in  treegix_get.c
src/treegix_java/: Makefile.am  Makefile.in  settings.sh  shutdown.sh  startup.sh
src/treegix_java/lib/: README  logback.xml
src/treegix_proxy/: Makefile.am  Makefile.in  events.c  proxy.c  proxy_alerter_protocol.c  proxy_lld.c  servercomms.c  servercomms.h
src/treegix_proxy/datasender/: Makefile.am  Makefile.in  datasender.c  datasender.h
src/treegix_proxy/heart/: Makefile.am  Makefile.in  heart.c  heart.h
src/treegix_proxy/housekeeper/: Makefile.in  housekeeper.c  housekeeper.h
src/treegix_proxy/proxyconfig/: Makefile.am  Makefile.in  proxyconfig.c  proxyconfig.h
src/treegix_proxy/taskmanager/: Makefile.am  Makefile.in  server_tasks.c  taskmanager.c  taskmanager.h
src/treegix_sender/: Makefile.am  Makefile.in  treegix_sender.c  zabbix_sender.c
src/treegix_sender/win32/: treegix_sender.c  treegix_sender.h  zabbix_sender.c  zabbix_sender.h
src/treegix_server/: Makefile.am  Makefile.in  actions.c  actions.h  events.c  events.h  operations.c  operations.h  postinit.c  postinit.h  server.c
src/treegix_server/alerter/: Makefile.am  Makefile.in  alert_manager.c  alert_manager.h  alert_syncer.c  alert_syncer.h  alerter.c  alerter.h  alerter_protocol.c  alerter_protocol.h
src/treegix_server/dbconfig/: Makefile.am  Makefile.in  dbconfig.c  dbconfig.h
src/treegix_server/dbsyncer/: Makefile.am  Makefile.in  dbsyncer.c  dbsyncer.h
src/treegix_server/discoverer/: Makefile.am  Makefile.in  discoverer.c  discoverer.h
src/treegix_server/escalator/: Makefile.am  Makefile.in  escalator.c  escalator.h
src/treegix_server/housekeeper/: Makefile.am  Makefile.in  housekeeper.c  housekeeper.h
src/treegix_server/httppoller/: Makefile.am  Makefile.in  httpmacro.c  httpmacro.h  httppoller.c  httppoller.h  httptest.c  httptest.h
(+1590 files in other folders)
